--- a/slides/KuninBogoiavlenskii2024Slides.tex
+++ b/slides/KuninBogoiavlenskii2024Slides.tex
@@ -20,7 +20,7 @@
 \usepackage{hyperref}% urls
 \usepackage{hhline}%tables
 % Your figures are here:
-\graphicspath{ {fig/} {../fig/} }
+\graphicspath{{../figures/} }
 
 %----------------------------------------------------------------------------------------------------------
 \title[\hbox to 56mm{Influence of hyperparameters}]{Influence of hyperparameters on aggregating predictions of infinite number of experts}
